--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@
       </main>
       <footer class="footer">
         <div class="footer__container">
-          <div class="footer__app">
+          <a href="#" class="footer__app">
             <img src="img/footer/google-play.svg" alt="Google Play" />
-          </div>
-          <div class="footer__app">
+          </a>
+          <a href="#" class="footer__app">
             <img src="img/footer/app-store.svg" alt="App Store" />
-          </div>
+          </a>
         </div>
       </footer>
     </div>
